k8s/sonarqube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarqube-service
  namespace: sonarqube
  labels:
    app: sonarqube
spec:
  selector:
    app: sonarqube
  ports:
  - name: http
    port: 9000
    targetPort: 9000
    protocol: TCP
  type: ClusterIP
